--- a/.env
+++ b/.env
@@ -4,17 +4,17 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://ricardo:whpme8hMWuWd0RW5@cluster0.wz8w7.mongodb.net/messenger"
-NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+DATABASE_URL=
+NEXTAUTH_SECRET=
 
-GITHUB_ID=cf5fc898212e86e8955c
-GITHUB_SECRET=c4a3ff44b3d0a13e69c411e6ff77574259ecbb11
+GITHUB_ID=
+GITHUB_SECRET=
 
-GOOGLE_CLIENT_ID=959605670395-afbinl07c1bu03bjr11oi4q8761r3pqt.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=drxyoybae
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
 
-NEXT_PUBLIC_PUSHER_APP_KEY=cc7a7bd3d49f81660e63
-PUSHER_APP_ID=1636612
-PUSHER_SECRET=b6501e9f0212d4dafd9e
+NEXT_PUBLIC_PUSHER_APP_KEY=
+PUSHER_APP_ID=
+PUSHER_SECRET=
